<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="home.antonyaskiv.geotask.View.Fragments.WhenceFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <EditText
    android:id="@+id/whence_edit_text"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textColor="#0b0b0b"

    />
     <Button
        android:id="@+id/search_of_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
></Button>
    </LinearLayout>

    <ListView
        android:id="@+id/list_of_3_elements"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        ></ListView>
<com.google.android.gms.maps.MapView
    android:id="@+id/mapView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>


</LinearLayout>
