<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="home.antonyaskiv.geotask.View.Activities.HomeActivity">



        <android.support.design.widget.TabLayout
            style="@style/AppTabLayout"
            app:tabTextAppearance="@style/AppTabTextAppearance"
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:tabGravity="fill"
            />
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
</LinearLayout>
    <LinearLayout
        android:layout_weight="8"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/search_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="SearchWay"
            android:text="search"/>
    </LinearLayout>
</LinearLayout>
